# secant-server

./: Architecture.md  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cc
src/enclave/: app
src/server/: listener.cc
